# aios

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SMOKE_PR8.md  alembic.ini  compose.yml  openapi.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-tool-use.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-sandbox.yml  build-signal-connector.yml  code-validation.yml  gvisor-validation.yml  migration-chain-canary.yml  migration-collision-check.yml  phantom-ref-canary.yml  promote-api.yml  promote-sandbox.yml  promote-worker.yml  reconcile-agents.yml  release-aios-sdk.yml  reregister-dev-pipeline.yml  reregister-workflows.yml  retirement-aging-sla.yml  retirement-residue-rescan.yml
connectors/: MIGRATION.md
connectors/echo-http/: Dockerfile  README.md  pyproject.toml
connectors/echo-http/aios_echo_http/: __init__.py  __main__.py  connector.py
connectors/matrix/: Dockerfile  README.md  healthcheck.py  pyproject.toml  registration.yaml  synapse.yaml
connectors/matrix/aios_matrix/: __init__.py  __main__.py  appservice.py  config.py  connector.py
connectors/matrix/tests/: test_appservice.py  test_connector.py  test_deployment.py
connectors/signal/: Dockerfile  README.md  SPQR-HOTFIX.md  entrypoint.sh  pyproject.toml  signal-cli-modeb-receipt-guard.patch
connectors/slack/: Dockerfile  README.md  pyproject.toml
connectors/slack/src/aios_slack/: __init__.py  __main__.py  connector.py  format.py  parse.py
connectors/slack/tests/: conftest.py  test_format.py  test_parse.py  test_serve_connection.py  test_slack_outbound.py
connectors/sms/: Dockerfile  README.md  pyproject.toml
connectors/sms/src/aios_sms/: __init__.py  __main__.py  addressing.py  config.py  connector.py  ingress.py  selftest.py  state.py  verify.py  webhook.py
connectors/sms/tests/: conftest.py  test_addressing.py  test_config_ingress.py  test_connector_inbound.py  test_ingress.py  test_verify.py  test_webhook.py  test_webhook_ingress.py
connectors/telegram/: Dockerfile  README.md  pyproject.toml
connectors/telegram/src/aios_telegram/: __init__.py  __main__.py  app.py  bot.py  config.py  connector.py  errors.py  factory.py  format.py  inbound.py  ingest.py  logging.py  mcp.py  parse.py  prompts.py
connectors/telegram/tests/: conftest.py  test_build_metadata.py  test_format.py  test_inbound.py  test_inbound_event_id.py  test_inbound_tempfile_lifecycle.py  test_ingest.py  test_mcp.py  test_parse.py  test_prompts.py  test_telegram_outbound.py  test_telegram_send.py
connectors/whatsapp/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
docker/: Dockerfile.sandbox  seccomp-sandbox.json
docs/: vault-key-rotation.md
docs/design/: 0818-triggers-slice1-contract.md  0819-triggers-slice2-contract.md  1523-create-goal-terminology-of-record.md  aios-vs-eve-architecture.md  aios-vs-hermes-architecture.md  competitive-recon-agiresearch-aios.md  durable-session-sandboxes.md  eve-adoption-primitive-decomposition.md  matrix-appservice-connector.md  slack-connector.md  sms-connector.md
docs/ops/: crash-recovery-drill.md  inference-credentials.md  root-recovery.md  telemetry-observer-loop.md
docs/reference/: anthropic-scheduled-deployments.md  lifecycle-search-redaction.md  litellm-reasoning-controls.md  run-observability.md  vault-credential-boundaries.md
evals/wam_fusion/: .gitignore  README.md  aios_client.py  analyze_cost_map.py  coding_partial_findings.json  coding_prompt.py  coding_scorer.py  cost_map_gateways.py  mine_corpus.py  probe_temperature.py  recipes.py  run_coding.py  run_cost_map.py  run_eval.py  run_fusion.py  run_selection.py  score_cost_map.py  scoring.py  selection_archetypes.py  selection_arms.py  selection_bakeoff_results.json  stats_fusion.py  test_selection.py  test_stats_fusion.py  test_tost.py  tost.py
infra/agents/: README.md  ceo-front.json  dev-ci-watch.json  dev-fix.json  dev-implement.json  dev-review.json  dev-risk.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_drop_lease_columns.py  0003_agent_versioning.py  0004_custom_tools_env_config.py  0005_session_usage.py  0005_vaults.py  0006_session_usage.py  0007_mcp_servers.py  0007_rescheduling_status.py  0008_mcp_servers.py  0008_skills.py  0009_skills.py  0010_events_search_view.py  0011_sweep_indexes.py  0012_cumulative_tokens.py  0013_events_search_messages_only.py  0014_session_env.py  0015_connections_bindings_rules.py  0015_vault_credentials_cascade.py  0016_vault_credentials_cascade.py  0017_focal_channel.py  0018_agent_triage.py  0018_events_channel.py  0019_per_connection_routing_scope.py  0020_pending_session_status.py  0021_agent_litellm_extra.py  0022_events_search_paradigm_columns.py  0023_sweep_indexes_role_column.py  0024_model_request_end_calibration_index.py  0025_channel_only_connections.py  0025_memory_stores.py  0026_channel_only_connections.py  0026_connector_redesign.py  0026_drop_connection_mcp_fields.py  0026_github_repositories.py  0027_connector_redesign.py  0027_drop_connection_mcp_fields.py  0027_drop_mcp_channel_context.py  0028_drop_mcp_channel_context.py  0028_github_repo_git_identity.py  (+165 more)
scripts/: backfill_cumulative_tokens.py  crash-recovery-drill.sh  dev-bootstrap.sh  dev-seed-console-key.sh  pooled_connection_lint.py  reconcile_agents.py  regen-client.sh  regen-openapi.sh  regen-replay-semantics-fingerprint.py  reregister_dev_pipeline.py  reregister_workflows.py  run-checks.sh
scripts/git-hooks/: pre-commit
spike/: echo_connector.py
src/aios/: __init__.py  __main__.py  actors.py  config.py  errors.py  ids.py  logging.py  pinned_transport.py  tail.py
src/aios_connectors/: __init__.py  providers.py  resolver.py
tests/: conftest.py  support.py
tests/e2e/: __init__.py  _connector_helpers.py  conftest.py  harness.py  local_targets.py  test_account_auth.py  test_accounts_bootstrap.py  test_accounts_mgmt.py  test_agent_litellm_extra.py  test_agents_api.py  test_archived_workspace_reaper_query.py  test_connection_discovery_sse.py  test_connection_tools.py  (+86 more)
(+1313 files in other folders)
