[project]
name = "aios"
version = "0.1.0"
description = "Open-source agent runtime: Postgres-backed sessions, Docker sandbox, any LiteLLM model"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "aios contributors" }]

dependencies = [
    # HTTP + SSE
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    # Validation + settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Postgres + migrations + job queue
    "asyncpg>=0.30",
    "alembic>=1.13",
    "sqlalchemy>=2.0",          # required by alembic even when used without the ORM
    "procrastinate==3.8.1",     # exact pin so the task/connector API stays stable
    "psycopg[binary]>=3.2",     # required by procrastinate; aios uses asyncpg directly
    # Sandbox
    "aiodocker>=0.23",
    # Crypto + ids
    "pynacl>=1.5",
    "python-ulid>=3.0",
    # LLM client
    "litellm>=1.55",
    # Web tools
    "httpx>=0.27",
    # Observability
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",                # FastAPI TestClient backend
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
aios = "aios.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios"]

# ─── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "TID", # tidy imports
    "ASYNC", # async-specific lints
]
ignore = [
    "E501",  # line length is enforced by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",       # allow asserts in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "aiodocker.*",
    "procrastinate.*",
    "testcontainers.*",
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests requiring a Postgres testcontainer",
    "e2e: end-to-end tests requiring Docker + a real or recorded model",
]
