[project]
name = "aios"
version = "0.1.0"
description = "Open-source agent runtime: Postgres-backed sessions, Docker sandbox, any LiteLLM model"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "aios contributors" }]

dependencies = [
    # HTTP + SSE
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    # Validation + settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Postgres + migrations + job queue
    "asyncpg>=0.30",
    "alembic>=1.13",
    "sqlalchemy>=2.0",          # required by alembic even when used without the ORM
    "procrastinate==3.8.1",     # exact pin so the task/connector API stays stable
    "psycopg[binary]>=3.2",     # required by procrastinate; aios uses asyncpg directly
    "croniter>=3.0",            # cron expression validation + next-fire computation (scheduled_tasks)
    "dateparser>=1.2",          # natural-language time parsing for schedule_wake's `at` argument
    # Bundled IANA tz database so zoneinfo resolves named zones for per-account
    # received-at rendering regardless of whether the deploy image ships a
    # system tzdb (otherwise tzdata is only a win32-marked transitive dep).
    "tzdata>=2024.1",
    # Sandbox
    "aiodocker>=0.23",
    # Crypto + ids
    "pynacl>=1.5",
    "cryptography>=46",         # egress-CA x509 cert + EC key (sandbox/egress_ca.py)
    "python-ulid>=3.0",
    # LLM client
    "litellm>=1.55",
    # MCP client + server reflection
    "mcp>=1.20",
    "fastapi-mcp>=0.4",
    # Web tools
    "httpx>=0.27",
    # CLI
    "typer>=0.12",
    # Observability
    "structlog>=24.4",
    # Split into its own package so connector containers can depend on the
    # SDK without dragging in fastapi/asyncpg/procrastinate/etc.
    "aios-sdk",
    # Shared HTTP-client SDK: the runtime imports ``sniff_image_mime``
    # for renderer-side mime correction so the same magic-byte detector
    # runs at the connector boundary and at replay time.
    "aios-connector-http",
    # Inbound image downsampling at staging time so vision-capable models
    # see the pixels instead of a path marker.  See harness/image_resize.py.
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6",          # parallel test execution on docker e2e shard
    "httpx>=0.27",                # FastAPI TestClient backend
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "openapi-python-client>=0.21",
    # Reference + production connectors — e2e tests import each
    # connector's runner directly to drive multi-connection routing.
    "aios-echo-http",
    "aios-signal",
    "aios-telegram",
    "aios-whatsapp",
]

[project.scripts]
aios = "aios.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios", "src/aios_connectors"]

# ─── uv workspace ────────────────────────────────────────────────────────────
[tool.uv.workspace]
members = [
    "connectors/echo-http",
    "connectors/signal",
    "connectors/telegram",
    "connectors/whatsapp",
    "packages/aios-connector-http",
    "packages/aios-sdk",
]

# Install the SDK + reference + production connectors in editable mode
# for development and tests; production deploys each connector as its
# own container.
[tool.uv.sources]
aios-connector-http = { workspace = true }
aios-echo-http = { workspace = true }
aios-sdk = { workspace = true }
aios-signal = { workspace = true }
aios-telegram = { workspace = true }
aios-whatsapp = { workspace = true }

# ─── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Build artifact from scripts/regen-client.sh; lint complaints belong
# upstream in openapi-python-client, not in this repo.
extend-exclude = ["packages/aios-sdk/aios_sdk/_generated"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "TID", # tidy imports
    "ASYNC", # async-specific lints
]
ignore = [
    "E501",  # line length is enforced by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",       # allow asserts in tests
]

[tool.ruff.lint.isort]
# Workspace packages are first-party from the linter's perspective even
# though they're separate distributions.  Without this hint ruff groups
# them with third-party imports and complains about import order.
known-first-party = ["aios", "aios_sdk", "aios_connector_http"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "mcp.*",
    "fastapi_mcp.*",
    "aiodocker.*",
    "procrastinate.*",
    "testcontainers.*",
    "asyncpg",
    "asyncpg.*",
    "croniter",
    "croniter.*",
    "dateparser",
    "dateparser.*",
    "jsonschema",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Build artifact from scripts/regen-client.sh; type complaints belong
# upstream in openapi-python-client, not here.
[[tool.mypy.overrides]]
module = "aios_sdk._generated.*"
ignore_errors = true
follow_imports = "skip"

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Surface slow tests in every CI log so regressions don't accumulate
    # silently.  ``--durations-min=0.5`` filters out the noise floor so
    # the report stays a sentence, not a screenful.
    "--durations=20",
    "--durations-min=0.5",
]
markers = [
    "integration: tests requiring a Postgres testcontainer",
    "e2e: end-to-end tests requiring Docker + a real or recorded model",
    "slow: heavy tests (benchmarks, large fixtures) — skipped on PR CI, run nightly",
    "docker: e2e tests that need the sandbox image (selected by CI's docker shard)",
]
