[project]
name = "aios-matrix"
version = "0.1.0"
description = "Bare Matrix appservice receiver for aios"
requires-python = ">=3.13"
dependencies = [
    "aios-connector-http",
    "mautrix==0.21.1",
    "asyncpg>=0.30",
    "pydantic-settings>=2.6",
]

[tool.uv.sources]
aios-connector-http = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pyyaml>=6",
    "types-pyyaml>=6",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aios_matrix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
