[project]
name = "aios-slack"
version = "0.1.0"
description = "Slack connector for aios"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "aios contributors" }]

dependencies = [
    "aios-connector-http",
    "structlog>=24.4",
    # Socket-Mode only: we use AsyncWebClient + AsyncSocketModeClient.
    # slack-bolt's HTTP receiver / ack machinery is dead weight here.
    "slack-sdk>=3.31,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_slack"]

# ─── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TID",
    "ASYNC",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# slack-sdk's async Socket-Mode surface is only partially typed (its
# ``connect``/``disconnect``/``close`` come back as untyped functions and
# its listener-list element type is the abstract base client).  Treat the
# whole package as untyped at the import boundary so strict mypy doesn't
# flag every call into it; the connector wraps the seam thinly.
[[tool.mypy.overrides]]
module = ["slack_sdk.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
